<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.BookInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_Book_in_info"
                android:layout_width="106dp"
                android:layout_height="146dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/no_image_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_book_in_infoTV"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:hint="Name Book"
                android:maxLines="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView_Book_in_info" />

            <TextView
                android:id="@+id/name_author_in_infoTV"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:ellipsize="end"
                android:hint="Name author"
                android:maxLines="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_book_in_infoTV" />

            <Button
                android:id="@+id/read_online_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/read_online_book_btn"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_textView" />

            <Button
                android:id="@+id/save_favorites_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/save_book_btn"
                android:textSize="20sp"
                android:textStyle="bold"
                app:icon="@drawable/save_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/read_online_button" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/baseline_arrow_forward_ios_24"
                app:layout_constraintBottom_toBottomOf="@+id/may_you_likeTV"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/may_you_likeTV"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:text="@string/like"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/download_button" />

            <ProgressBar
                android:id="@+id/progressBar_may_you_like"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="44dp"
                app:layout_constraintBottom_toBottomOf="@+id/may_you_likeTV"
                app:layout_constraintEnd_toStartOf="@+id/imageView4" />

            <Button
                android:id="@+id/download_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/download_book_btn"
                android:textSize="20sp"
                android:textStyle="bold"
                app:icon="@drawable/download_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_favorites_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/may_you_likeTV">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_may_you_like"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>

            <TextView
                android:id="@+id/description_textView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:hint="No description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rataTV" />

            <TextView
                android:id="@+id/rataTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/book_rate"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_Book_in_info" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarSize="2dp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rataTV"
                tools:scrollbarSize="2dp" />

            <TextView
                android:id="@+id/rateingIntTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ratingBar" />

            <TextView
                android:id="@+id/number_download"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/progressBar_download"
                app:layout_constraintEnd_toEndOf="@+id/progressBar_download"
                app:layout_constraintStart_toStartOf="@+id/progressBar_download"
                app:layout_constraintTop_toTopOf="@+id/progressBar_download" />

            <ProgressBar
                android:id="@+id/progressBar_download"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="33dp"
                android:layout_height="38dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/background_circular_progress"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/circular_progress_bar"
                app:layout_constraintEnd_toStartOf="@+id/imageView_Book_in_info"
                app:layout_constraintTop_toBottomOf="@+id/name_author_in_infoTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>