<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5">

        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/sheep"
            android:hint="    Search"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintLeft_toLeftOf="@+id/searchET_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="266dp"
            android:layout_height="175dp"
            android:src="@drawable/img"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_search"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/motivational"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="@id/recentlyAddBook"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/recentlyAddBook"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:text="@string/first_block"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="84dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/recentlyAddBook"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentlyAddBook">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewOfRecentlyAddBook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="@id/variousBook"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/variousBook"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/second_block"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout1" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/variousBook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/variousBook"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/linearlayout2"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/variousBook">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewOfvariousBook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

        <ImageView
            android:id="@+id/searchET_button"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:src="@drawable/baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_search"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_search"
            app:layout_constraintTop_toTopOf="@+id/edit_text_search" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
